fixed notebook height on toggle notebook list, letter spacing styles in general

--- a/src/assets/scss/components/02_molecules/pageComponents.scss
+++ b/src/assets/scss/components/02_molecules/pageComponents.scss
@@ -60,7 +60,7 @@
                     color: #2F3133;
                     font-size: 17px;
                     line-height: 32px;
-                    letter-spacing: 0.2ch;
+                    letter-spacing: 0.2px;
                     resize: none;
                     overflow-y: hidden;
                     background-image: -moz-linear-gradient(top , transparent, transparent 31px,#E7EFF8 0px);
