--- a/src/assets/scss/general/typography.scss
+++ b/src/assets/scss/general/typography.scss
@@ -60,7 +60,7 @@ body, input, textarea, label, .genderLabel {
   @extend .font;
   font-size: 11px;
   line-height: 13px;
-  letter-spacing: 0.4ch;
+  letter-spacing: 0.4px;
 }
 
 h1 { @extend .h1; }
